[package]
name = "ch32v-rt"
version = "0.0.1"
rust-version = "1.59"
repository = "https://github.com/rust-embedded/riscv-rt"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "no-std"]
description = "Minimal runtime / startup for RISC-V CPU's"
keywords = ["riscv", "runtime", "startup"]
license = "ISC"
edition = "2018"

[dependencies]
r0 = "1.0.0"
riscv = "0.10"
riscv-rt-macros = { path = "macros", version = "0.2.0" }

[dependencies.ch32v1]
#path = "../ch32-rs-nightlies/ch32v1"
# git = "https://github.com/ch32-rs/ch32-rs-nightlies.git"
git = "https://github.com/nosuz/ch32-rs-nightlies.git"

version = "0.1.6"
features = ["rt"]

[dev-dependencies]
panic-halt = "0.2.0"

[build-dependencies]
riscv-target = "0.1.2"

[features]
default = []
interrupt = []
ch32v103 = ["interrupt"]
